@@ -25,7 +25,7 @@ First level variables
 Top level classes
 ===================
 
-.. py:class:: cparams(clevel=5, shuffle=True, cname='blosclz')
+.. py:class:: cparams(clevel=None, shuffle=None, cname=None)
 
     Class to host parameters for compression and other filters.
 
@@ -34,12 +34,32 @@ Top level classes
         The compression level.
       shuffle : bool
         Whether the shuffle filter is active or not.
-      cname : string ('blosclz', 'lz4', 'lz4hc', 'snappy', 'zlib', others?)
+      cname : string ('blosclz', 'lz4', 'lz4hc', 'snappy', 'zlib')
         Select the compressor to use inside Blosc.
 
-    Notes:
-      The shuffle filter may be automatically disable in case it is
-      non-sense to use it (e.g. itemsize == 1).
+    In case some of the parameters are not passed, they will be set to
+    a default (see `setdefaults()` method).
+
+    See Also:
+        :py:func:`cparams.setdefaults`
+
+
+  .. py:method:: setdefaults(clevel=None, shuffle=None, cname=None)
+
+    Change the defaults for `clevel`, `shuffle` and `cname` params.
+
+    Parameters:
+      clevel : int (0 <= clevel < 10)
+        The compression level.
+      shuffle : bool
+        Whether the shuffle filter is active or not.
+      cname : string ('blosclz', 'lz4', 'lz4hc', 'snappy', 'zlib')
+        Select the compressor to use inside Blosc.
+
+    If this method is not called, the defaults will be set as in
+    defaults.py, which initially is set as ``clevel=5``,
+    ``shuffle=True``, ``cname='blosclz'``.
+
 
 Also, see the :py:class:`carray` and :py:class:`ctable` classes below.
 
